chandeliers-lus/tests/compile_fail/ui/clk/too-fast.stderr
error: This expression is too slow: expected the implicit clock 'self, found 'when b
 --> tests/compile_fail/ui/clk/too-fast.rs:7:9
  |
7 |         n = if b then 1 else 2;
  |         ^
  |
note: Found 'when b here
 --> tests/compile_fail/ui/clk/too-fast.rs:4:22
  |
4 |         n : int when b;
  |                      ^
note: Expected because this expression moves at the implicit pace
 --> tests/compile_fail/ui/clk/too-fast.rs:7:13
  |
7 |         n = if b then 1 else 2;
  |             ^^^^^^^^^^^^^^^^^^
